<resources>
    <string name="app_name">videocallapp</string>
    <string name="welcome_to_the">Welcome To The</string>
    <string name="_1_to_1_meeting_application">1 To 1 Meeting Application</string>
    <string name="sign_in_below">Sign in below</string>
    <string name="email">Email</string>
    <string name="john_smith_example_com">john_smith@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">password123</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_details_below">Enter Details Below</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="john">John</string>
    <string name="smith">Smith</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="outgoing_call">Calling</string>
</resources>